--- a/src/app/test-component/test-component.component.html
+++ b/src/app/test-component/test-component.component.html
@@ -11,6 +11,6 @@
     <button class="btn btn-lg" style="color: #000 !important;">Realizar Test</button>
   </div>
   <div class="col-md-6">
-    <img src="../../assets/imagenes/imagen3.png" alt="">
+    <img src="../../assets/imagenes/imagen3.png" alt="" class="img-responsive">
   </div>
 </div>
