Añadida conexión a API REST para traer departamentos y ciudades

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,27 @@
 <app-nav-var></app-nav-var>
-<app-intro-component></app-intro-component>
-<br>
-<br>
-<app-programas-component></app-programas-component>
-<br>
-<br>
-<app-equivalencia-component></app-equivalencia-component>
-<br>
-<br>
-<app-test-component></app-test-component>
-<br>
-<br>
-<br>
-<br>
-<app-contacto-component></app-contacto-component>
-<br>
-<br>
-<app-footer-component></app-footer-component>
+<div class="col-sm-12" style="width: 90% !important;">
+    <app-intro-component></app-intro-component>
+    <br>
+    <br>
+    <app-programas-component></app-programas-component>
+    <br>
+    <br>
+    <app-equivalencia-component></app-equivalencia-component>
+    <br>
+    <br>
+</div>
+<div class="col-sm-12" style="width: 98% !important;">
+    <app-test-component></app-test-component>
+</div>
+
+<div class="col-sm-12" style="width: 90% !important;">
+    <br>
+    <br>
+    <br>
+    <br>
+    <app-contacto-component></app-contacto-component>
+    <br>
+    <br>
+    <app-footer-component></app-footer-component>
+</div>
 <router-outlet></router-outlet>
