--- a/src/app/programas-component/programas-component.component.html
+++ b/src/app/programas-component/programas-component.component.html
@@ -11,7 +11,7 @@
   
     <div class="tab-content" style="background-color: #fff !important;">
       <div id="nivel1" class="tab-pane fade in active" style="background-color: #fff !important;">
-        <div class="col-md-6" style="background-color: #fff !important;">
+        <div class="col-md-6" style="background-color: #fff !important; height: 500px !important;">
             <br>
             <a data-toggle="tab" href="#nivel4" onclick="cambiar_estado(1,4)">
                 <i class="glyphicon glyphicon-arrow-left"></i>
@@ -32,13 +32,13 @@
             </ul>
             <h1 id="nivel_degrade"><b>Nivel 1 al 4</b></h1>
           </div>      
-        <div class="col-md-6" style="background-color: #fff !important;">
+        <div class="col-md-6" style="background-color: #fff !important; height: 500px !important;">
           <img src="../../assets/imagenes/imagen2.png" alt="" width="95%">
         </div>
       </div>
       
       <div id="nivel2" class="tab-pane fade" style="background-color: #fff !important;">
-        <div class="col-md-6" style="background-color: #fff !important;">
+        <div class="col-md-6" style="background-color: #fff !important;height: 500px !important;">
             <br>
             <a data-toggle="tab" href="#nivel1" onclick="cambiar_estado(2,1)">
                 <i class="glyphicon glyphicon-arrow-left"></i>
@@ -59,13 +59,13 @@
             </ul>
             <h1 id="nivel_degrade"><b>Nivel 5 al 8</b></h1>
           </div>      
-        <div class="col-md-6" style="background-color: #fff !important;">
+        <div class="col-md-6" style="background-color: #fff !important;height: 500px !important;">
           <img src="../../assets/imagenes/imagen2.png" alt="" width="95%">
         </div>
       </div>
 
     <div id="nivel3" class="tab-pane fade" style="background-color: #fff !important;">
-      <div class="col-md-6" style="background-color: #fff !important;">
+      <div class="col-md-6" style="background-color: #fff !important;height: 500px !important;">
           <br>
           <a data-toggle="tab" href="#nivel2" onclick="cambiar_estado(3,2)">
               <i class="glyphicon glyphicon-arrow-left"></i>
@@ -86,13 +86,13 @@
           </ul>
           <h1 id="nivel_degrade"><b>Nivel 9 al 12</b></h1>
         </div>      
-      <div class="col-md-6" style="background-color: #fff !important;">
+      <div class="col-md-6" style="background-color: #fff !important;height: 500px !important;">
         <img src="../../assets/imagenes/imagen2.png" alt="" width="95%">
       </div>
     </div>
 
     <div id="nivel4" class="tab-pane fade" style="background-color: #fff !important;">
-      <div class="col-md-6" style="background-color: #fff !important;">
+      <div class="col-md-6" style="background-color: #fff !important;height: 500px !important;">
           <br>
           <a data-toggle="tab" href="#nivel3" onclick="cambiar_estado(4,3)">
               <i class="glyphicon glyphicon-arrow-left"></i>
@@ -113,7 +113,7 @@
           </ul>
           <h1 id="nivel_degrade"><b>Nivel 13 al 16</b></h1>
         </div>      
-      <div class="col-md-6" style="background-color: #fff !important;">
+      <div class="col-md-6" style="background-color: #fff !important;height: 500px !important;">
         <img src="../../assets/imagenes/imagen2.png" alt="" width="95%">
       </div>
     </div>
