--- a/src/app/test-component/test-component.component.html
+++ b/src/app/test-component/test-component.component.html
@@ -1,16 +1,16 @@
 <div class="row" style="background-color: #284AA0 !important; color: #fff !important;">
-  <div class="col-md-6" id="texto-test">
-    <h1 id="mide-gratis"><b>¡Mide gratis tu nivel de inglés!</b></h1>
+  <div class="col-md-6 col-sm-12" id="texto-test">
+    <h1 id="mide-gratis"><b>¡Mide gratis <br> tu nivel de inglés!</b></h1>
     <br>
     <br>
     <p id="primer-paso">
-      Este es el primer paso para iniciar tus estudios con nosotros.
+      Este es el primer paso para iniciar tus <br> estudios con nosotros.
     </p>
     <br>
     <br>
     <button class="btn btn-lg" style="color: #000 !important;">Realizar Test</button>
   </div>
   <div class="col-md-6">
-    <img src="../../assets/imagenes/imagen3.png" alt="" class="img-responsive">
+    <img src="../../assets/imagenes/imagen3.png" alt="" width="662px" height="400px">
   </div>
 </div>
