--- a/src/app/contacto-component/contacto-component.component.html
+++ b/src/app/contacto-component/contacto-component.component.html
@@ -1,61 +1,71 @@
 <div class="row">
   <div class="col-md-6">
       <div class="rectangle-8">
-        <h1 id="primer-paso-text">¡Da el Primer Paso!
+        <h1 id="primer-paso-text">¡Da el Primer Paso!<br>
             Estudia con Nosotros</h1>
       </div>
   </div>
   <div class="col-md-6">
-      <div class="rectangle-7" id="problemas-text" style="background-color: #284AA0 !important;">
+      <div class="rectangle-7" id="problemas-text">
           Si tiene problemas, puedes comunicarte con nosotros a través del PBX (+57) (2) 481 0110 o desarrollo@existaya.com
       </div>
   </div> 
 </div>
 
 <div class="container" id="contenedor-form">
-    <form action="">
-      <div class="row">
-        
-          <div class="col-md-6">
-            <h1 id="titulo-form">Datos personales</h1>
-            
-                <div class="form-group">
-                  <label for="nombre">Nombre completo *:</label>
-                  <input type="text" class="form-control" id="nombre">
-                </div>
-                <div class="form-group">
-                  <label for="numero">Número de Contacto *:</label>
-                  <input type="number" class="form-control" id="numero">
-                </div>
-                <div class="form-group">
-                  <label for="email">Correo Electrónico *:</label>
-                  <input type="email" class="form-control" id="email">
-                </div>
-                <div class="form-group">
-                  <label for="fecha-nacimiento">Fecha de Nacimiento *:</label>
-                  <input type="date" class="form-control" id="fecha-nacimiento">
-                </div>
-            
-          </div>
-          <div class="col-md-6">
-            <br>
-            <br>
-            <br>
+  <form action="">
+    <div class="row">        
+      <div class="col-md-4 col-md-offset-3">
+        <h1 id="titulo-form">Datos personales</h1>            
             <div class="form-group">
-              <label for="departamento">Departamento *:</label>
-              <input type="email" class="form-control" id="departamento">
+              <label for="nombre">Nombre completo *:</label>
+              <input type="text" class="form-control" id="nombre">
             </div>
             <div class="form-group">
-              <label for="ciudad">Ciudad *:</label>
-              <input type="date" class="form-control" id="ciudad">
+              <label for="numero">Número de Contacto *:</label>
+              <input type="number" class="form-control" id="numero">
             </div>
-          </div>      
-        </div>
+            <div class="form-group">
+              <label for="email">Correo Electrónico *:</label>
+              <input type="email" class="form-control" id="email">
+            </div>
+            <div class="form-group">
+              <label for="fecha-nacimiento">Fecha de Nacimiento *:</label>
+              <input type="date" class="form-control" id="fecha-nacimiento">
+            </div>            
+      </div>
+      <div class="col-md-4">
         <br>
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <a href="" id="btn-registrarme"><i class="glyphicon glyphicon-pencil"></i> &nbsp;Registrarme</a>
-          </div>
+        <br>
+        <br>
+        <div class="form-group">
+          <label for="departamento">Departamento *:</label>
+          <select class="form-control" id="departamento" (change)="changed($event.target.value)">
+              <option value="-">Seleccione un departamento</option>
+              <option *ngFor="let item of departamentos" value={{item.c_digo_dane_del_departamento}}>
+                  {{item.departamento}}
+              </option>
+          </select>
         </div>
-      </form>
+        <div class="form-group">
+            <label for="ciudad">Ciudad *:</label>
+            <select class="form-control" id="ciudad">
+              <option value="-">Seleccione una ciudad</option>
+                <option *ngFor="let item of ciudades" value={{item.c_digo_dane_del_municipio}}>
+                    {{item.municipio}}
+                </option>
+            </select>
+        </div>
+      </div>      
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <a href="" id="btn-registrarme"><i class="glyphicon glyphicon-pencil"></i> &nbsp;Registrarme</a>
+        <br>
+        &nbsp;
+        <br>
+      </div>
+    </div>
+  </form>
 </div>
