--- a/src/app/equivalencia-component/equivalencia-component.component.html
+++ b/src/app/equivalencia-component/equivalencia-component.component.html
@@ -11,7 +11,7 @@
     <table class="table borderless">
       <thead>
         <tr>
-          <td><b>Programa de inglés para Adultos (Programa 4 días, Sábado e Intensivos)</b></td>
+          <td style="background-color: #ffffff !important;"><b>Programa de inglés para Adultos (Programa 4 días, Sábado e Intensivos)</b></td>
           <td style="background-color: #e2e2e2 !important;"><b>Material de estudio</b></td>
           <td style="background-color: #cecece !important;"><b>Ciclo</b></td>
           <td style="background-color: #bcbcbc !important;"><b>Horas</b></td>
@@ -20,28 +20,28 @@
       </thead>
       <tbody>
         <tr>
-          <td></td>
+          <td style="background-color: #ffffff !important;"></td>
           <td style="background-color: #e2e2e2 !important;">Libro life 1</td>
           <td style="background-color: #cecece !important;">Fundamental 1-4</td>
           <td style="background-color: #bcbcbc !important;">128</td>
           <td style="background-color: #a0a0a0 !important;">A1</td>
         </tr>
         <tr>
-          <td></td>
+          <td style="background-color: #ffffff !important;"></td>
           <td style="background-color: #e2e2e2 !important;">Libro life 2</td>
           <td style="background-color: #cecece !important;">Fundamental Plus 1-4</td>
           <td style="background-color: #bcbcbc !important;">128</td>
           <td style="background-color: #a0a0a0 !important;">A2</td>
         </tr>
         <tr>
-          <td></td>
+          <td style="background-color: #ffffff !important;"></td>
           <td style="background-color: #e2e2e2 !important;">Libro life 3</td>
           <td style="background-color: #cecece !important;">Pre Independent 1-4</td>
           <td style="background-color: #bcbcbc !important;">128</td>
           <td style="background-color: #a0a0a0 !important;">B1</td>
         </tr>
         <tr>
-          <td></td>
+          <td style="background-color: #ffffff !important;"></td>
           <td style="background-color: #e2e2e2 !important;">Libro life 4</td>
           <td style="background-color: #cecece !important;">Independent 1-4</td>
           <td style="background-color: #bcbcbc !important;">128</td>
